--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "csgo-predict-lib",
+  "name": "csgo-predict-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-		"build": "tsc -p tsconfig.json",
-		"format": "npx prettier src/ --write"
+    "build": "tsc -p tsconfig.json",
+    "postbuild": "npm pack",
+    "format": "npx prettier src/ --write"
   },
   "author": "Kyle Stadelmann",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "https": "^1.0.0",
     "prettier": "^2.7.1"
-  }
+  },
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^18.11.7"
+  },
+  "files": ["dist"],
+  "types": "dist/index.d.ts"
 }
