--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "csgo-predict-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "postbuild": "npm pack",
@@ -15,10 +15,10 @@
     "https": "^1.0.0",
     "prettier": "^2.7.1"
   },
-  "type": "module",
   "devDependencies": {
     "@types/node": "^18.11.7"
   },
   "files": ["dist"],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "type": "module"
 }
