--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "author": "Kyle Stadelmann",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.3",
-    "https": "^1.0.0",
-    "prettier": "^2.7.1"
+    "axios": "^1.1.3"
   },
   "devDependencies": {
-    "@types/node": "^18.11.7"
+    "@types/node": "^18.11.7",
+    "prettier": "^2.7.1"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "types": "dist/index.d.ts",
   "type": "module"
 }
