--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Kyle Stadelmann",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.3"
+    "axios": "^1.1.3",
+    "config": "^3.3.8"
   },
   "devDependencies": {
+    "@types/config": "^3.3.0",
     "@types/node": "^18.11.7",
     "prettier": "^2.7.1"
   },
