--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "Kyle Stadelmann",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.3",
-    "config": "^3.3.8"
+    "axios": "^1.1.3"
   },
   "devDependencies": {
     "@types/config": "^3.3.0",
