--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Kyle Stadelmann",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.3"
+    "axios": "^1.1.3",
+    "https": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.7",
