--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "Kyle Stadelmann",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.3",
-    "https": "^1.0.0"
+    "axios": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.7",
